Minor README tweak